--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.3"
+    "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
